// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatisticsPage selectors should return StatisticsCharts 1`] = `
Array [
  Object {
    "data": Array [
      Array [
        "centOS 7.1",
        6,
      ],
    ],
    "id": "operatingsystem",
    "search": "/hosts?search=os_title=~VAL~",
    "title": "OS Distribution",
    "url": "statistics/operatingsystem",
  },
]
`;

exports[`StatisticsPage selectors should return StatisticsHasMetadata 1`] = `true`;

exports[`StatisticsPage selectors should return StatisticsPage 1`] = `
Object {
  "charts": Array [
    Object {
      "data": Array [
        Array [
          "centOS 7.1",
          6,
        ],
      ],
      "id": "operatingsystem",
      "search": "/hosts?search=os_title=~VAL~",
      "title": "OS Distribution",
      "url": "statistics/operatingsystem",
    },
  ],
  "getStatisticsData": [Function],
  "getStatisticsMeta": [Function],
  "hasData": true,
  "hasError": false,
  "isLoading": false,
  "message": Object {},
  "statisticsMeta": Array [
    Object {
      "id": "operatingsystem",
      "search": "/hosts?search=os_title=~VAL~",
      "title": "OS Distribution",
      "url": "statistics/operatingsystem",
    },
    Object {
      "id": "architecture",
      "search": "/hosts?search=facts.architecture=~VAL~",
      "title": "Architecture Distribution",
      "url": "statistics/architecture",
    },
  ],
}
`;

exports[`StatisticsPage selectors should return StatisticsPage Message 1`] = `Object {}`;

exports[`StatisticsPage selectors should return StatisticsPage hasError 1`] = `false`;

exports[`StatisticsPage selectors should return StatisticsPage isLoading 1`] = `false`;

exports[`StatisticsPage selectors should return StatisticsPage statisticsMeta 1`] = `
Array [
  Object {
    "id": "operatingsystem",
    "search": "/hosts?search=os_title=~VAL~",
    "title": "OS Distribution",
    "url": "statistics/operatingsystem",
  },
  Object {
    "id": "architecture",
    "search": "/hosts?search=facts.architecture=~VAL~",
    "title": "Architecture Distribution",
    "url": "statistics/architecture",
  },
]
`;
